cmake_minimum_required(VERSION 3.20)
project(producer_consumer)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -lpthread")
message(STATUS "This is BINARY dir" ${producer_consumer_BINARY_DIR})
message(STATUS "This is SOURCE dir" ${producer_consumer_SOURCE_DIR})
file(GLOB SRC ./*.cc)
add_executable(pc ${SRC})