cmake_minimum_required(VERSION 3.20)
project(bo_threadpool)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -pthread")
message(STATUS "This is Binary dir" ${bo_threadpool_BINARY_DIR})
message(STATUS "This is SOURCE dir" ${bo_threadpool_SOURCE_DIR})
file(GLOB SRC ./*.cc)
add_executable(bo_threadpool ${SRC})